--- a/config/database.yml
+++ b/config/database.yml
@@ -79,16 +79,11 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: the_mcculloughs_org_production
-    username: the_mcculloughs_org
-    password: <%= ENV["THE_MCCULLOUGHS_ORG_DATABASE_PASSWORD"] %>
+  primary:
+    url: <%= ENV["DATABASE_URL"] %>
   cache:
-    <<: *primary_production
-    database: the_mcculloughs_org_production_cache
+    url: <%= ENV["DATABASE_URL"] %>?database=the_mcculloughs_org_production_cache
     migrations_paths: db/cache_migrate
   queue:
-    <<: *primary_production
-    database: the_mcculloughs_org_production_queue
+    url: <%= ENV["DATABASE_URL"] %>?database=the_mcculloughs_org_production_queue
     migrations_paths: db/queue_migrate
